# pycon-2023-fastapi-celery

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose copy.yml  docker-compose.yml  pyproject.toml  worker-start.sh
src/: celery_factory.py  config.py  main.py  tasks.py  worker.py
src/api/v1/: order.py
src/model/: __init__.py  order.py  product.py
src/service/: __init__.py  base.py  email.py  order.py  product.py
tests/: conftest.py
tests/api/: conftest.py  test_main.py
tests/api/v1/order/: test_order.py
tests/service/: test_order.py  test_product.py
wiremock/product-service/stubs/__files/: product1.json  product2.json  product3.json
wiremock/product-service/stubs/mappings/: get_product1.json  get_product2.json  get_product3.json
